--- a/404.html
+++ b/404.html
@@ -222,8 +222,8 @@
   <div class="container rad-fade-in">
     <nav class="navbar navbar-expand-lg navbar-light p-0">
       <a class="navbar-brand" href="https://joshpinto6.github.io/">
-        <span>Andreas</span>
-        <span>Ellure</span>
+        <span>Joshua</span>
+        <span>Pinto</span>
         
       </a>
       <button
