--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 <section id="portfolio" class="section section--border-bottom">
   <div class="container">
     <h2 class=" rad-animation-group rad-fade-down">
-      Clients &amp; Works
+      Works
     </h2>
     <div class="row row--padded rad-animation-group rad-fade-down">
       <div class="col-12">
@@ -508,9 +508,9 @@
     >
       
       <div class="col-12 col-md-5 mt-4 mt-md-0 my-md-auto">
-        <h3>Game Development Work</h3>
+        <h3>Game Development</h3>
         <p class="lead">
-          I enjoy creating and developing games, primarily using Scratch or Scratch forks, but also with Godot. I began coding with Scratch, mostly creating games and engines. Godot is an open-source game engine that I&#39;ve more recently begun learning. You can follow my games&#39; progress here.
+          I enjoy creating videogames, primarily using Scratch, but, more recently with Godot. I began coding with Scratch in 2015, mainly creating games and engines. Now I use Godot, a awesome 2D/3D open-source game engine. You can follow my games&rsquo; progress <a href="joshpinto6.itch.io">here.</a>
         </p>
         <a href="https://joshpinto6.github.io/" class="btn btn-primary"
           >Case Study<i class="icon-arrow-right"></i
@@ -520,9 +520,9 @@
         <img
           class='lozad img-responsive img-clip-left-backward'
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://joshpinto6.github.io/img/works/radity-finance.jpg"
-          data-srcset="https://joshpinto6.github.io/img/works/radity-finance.jpg 1x, https://joshpinto6.github.io/img/works/radity-finance@2x.jpg 2x"
-          alt="Game Development Work"
+          data-src="https://joshpinto6.github.io/img/works/celeste2.png"
+          data-srcset="https://joshpinto6.github.io/img/works/celeste2.png 1x, https://joshpinto6.github.io/img/works/celeste-clone-godot.png 2x"
+          alt="Game Development"
         />
       </div>
       
@@ -536,16 +536,17 @@
         <img
           class='lozad img-responsive img-clip-right-backward'
           src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-          data-src="https://joshpinto6.github.io/img/works/swissfintech.jpg"
-          data-srcset="https://joshpinto6.github.io/img/works/swissfintech.jpg 1x, https://joshpinto6.github.io/img/works/swissfintech@2x.jpg 2x"
-          alt="Swiss Fintech Website"
+          data-src="https://joshpinto6.github.io/img/works/oliver-the-dicemaster.png"
+          data-srcset="https://joshpinto6.github.io/img/works/oliver-the-dicemaster.png 1x, https://joshpinto6.github.io/img/works/oliver-the-dicemaster.png 2x"
+          alt="Oliver the Dice Master"
         />
       </div>
       <div class="col-12 col-md-5 mt-4 mt-md-0 my-md-auto">
-        <h3>Swiss Fintech Website</h3>
+        <h3>Oliver the Dice Master</h3>
         <p class="lead">
-          The Swiss Finance &#43; Technology Association is the leading FinTech hub in Switzerland.
+          A short Kirby-inspired pixel platformer I made in 48 hours for GMTK Game Jam 2022. You can track its progress <a href="joshpinto6.itch.io/oliver-the-dice-master">here.</a>
         </p>
+        <iframe frameborder="0" src="https://itch.io/embed/1610145" width="552" height="167"><a href="https://joshpinto6.itch.io/oliver-the-dice-master">Oliver the Dice Master by joshpinto6</a></iframe>
         <a href="https://joshpinto6.github.io/" class="btn btn-primary"
           >Case Study<i class="icon-arrow-right"></i
         ></a>
