--- a/404.html
+++ b/404.html
@@ -379,8 +379,11 @@
           currentURL = window.location.href;
           lowerCaseURL = currentURL.toLowerCase();
 
+          console.log(lowerCaseURL.substring(0, 'https://www.joshpinto6.github.io/GodotMage'.length));
+
           if (lowerCaseURL.substring(0, 'https://www.joshpinto6.github.io/GodotMage'.length) == "https://www.joshpinto6.github.io/godotmage") {
             location.replace("https://www.joshpinto6.github.io/GodotMage" + "/docs");
+            console.log("Redirecting!");
           }
       };
   </script>
