Remove outdated www from redirect script

--- a/404.html
+++ b/404.html
@@ -379,10 +379,10 @@
           currentURL = window.location.href;
           lowerCaseURL = currentURL.toLowerCase();
 
-          console.log(lowerCaseURL.substring(0, 'https://www.joshpinto6.github.io/GodotMage'.length));
+          console.log(lowerCaseURL.substring(0, 'https://joshpinto6.github.io/GodotMage'.length));
 
-          if (lowerCaseURL.substring(0, 'https://www.joshpinto6.github.io/GodotMage'.length) == "https://www.joshpinto6.github.io/godotmage") {
-            location.replace("https://www.joshpinto6.github.io/GodotMage" + "/docs");
+          if (lowerCaseURL.substring(0, 'https://joshpinto6.github.io/GodotMage'.length) == "https://joshpinto6.github.io/godotmage") {
+            location.replace("https://joshpinto6.github.io/GodotMage" + "/docs");
             console.log("Redirecting!");
           }
       };
